--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
 		margin-left: 10px;
 		margin-right: 10px;
 	}
-
 }
 
 
@@ -150,9 +149,6 @@ span{
 
 
 #logoReseaux img:hover{
-	transform: scale(1.6);  /*Zoom on Hover, 150% zoom - Note: if the zoom is too large, it will go outside of the viewport)*/
-
-	
-
-
+	transform: scale(1.6);  /*Zoom on Hover, 
+	150% zoom - Note: if the zoom is too large, it will go outside of the viewport)*/
 }
