--- a/style.css
+++ b/style.css
@@ -147,3 +147,9 @@ span {
     transform: scale(1.6); /*Zoom on Hover, 150% zoom - Note: if the zoom is too large, it will go outside of the viewport)*/
 }
 
+#viewCount {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    color: #372ea8;
+  }
